test/sema/typeck/lambda/variadic-and-array-lambda-differ.dora
fn expects_variadic(f: (Int32...): Int32) {}

fn expects_array(f: (Array[Int32]): Int32) {}

fn main() {
    let array = |values: Array[Int32]|: Int32 {
        values(0i64)
    };
    let variadic = |values: Int32...|: Int32 {
        values(0i64)
    };

    expects_variadic(array);
    expects_array(variadic);
}
